--- a/BlueShift.Tools.Web/Views/Home/Index.cshtml
+++ b/BlueShift.Tools.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     const v = new Vue({
         el: '#app',
         data: {
-            message: 'DIDDLED AND IT LIKED IT!'
+            message: 'Greetings human!'
         }
     })
 </script>
